[gd_scene load_steps=2 format=3 uid="uid://01tlp3idk3n7"]

[ext_resource type="Script" uid="uid://bovpf33c3s5ee" path="res://scripts/TutorialPopup.gd" id="1_ofr07"]

[node name="UI" type="CanvasLayer"]

[node name="TutorialPopup" type="PopupPanel" parent="."]
process_mode = 2
oversampling_override = 1.0
size = Vector2i(172, 342)
visible = true
content_scale_size = Vector2i(700, 420)
script = ExtResource("1_ofr07")

[node name="VBoxContainer" type="VBoxContainer" parent="TutorialPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 168.0
offset_bottom = 338.0

[node name="TitleLabel" type="Label" parent="TutorialPopup/VBoxContainer"]
layout_mode = 2
text = "How To Play
"

[node name="BodyLabel" type="RichTextLabel" parent="TutorialPopup/VBoxContainer"]
layout_mode = 2
text = "W - Up
A - Left
S - Down
D - Right

E - Attack
Shift - Sprint
Spacebar - Interact"
fit_content = true

[node name="ControlsGrid" type="GridContainer" parent="TutorialPopup/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="TutorialPopup/VBoxContainer/ControlsGrid"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="TutorialPopup/VBoxContainer"]
layout_mode = 2
text = "Don't Show Again"

[node name="HBoxContainer" type="HBoxContainer" parent="TutorialPopup/VBoxContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="TutorialPopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="SkipButton" type="Button" parent="TutorialPopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Skip
"

[node name="ShowTutorialButton" type="Button" parent="."]
offset_left = 1135.0
offset_right = 1151.0
offset_bottom = 31.0
text = "?"
